--- a/Mobile/src/main/AndroidManifest.xml
+++ b/Mobile/src/main/AndroidManifest.xml
@@ -18,4 +18,7 @@
         </activity>
     </application>
 
+    <!-- To access Google+ APIs: -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
