--- a/Mobile/build.gradle
+++ b/Mobile/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion '19.0.1'
 
     defaultConfig {
         minSdkVersion 14
@@ -19,5 +19,28 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
+    // You must install or update the Google Repository through the SDK manager to use this dependency.
+    // The Google Repository (separate from the corresponding library) can be found in the Extras category.
+    // compile 'com.google.android.gms:play-services:4.2.42'
+    // You must install or update the Google Repository through the SDK manager to use this dependency.
+    // The Google Repository (separate from the corresponding library) can be found in the Extras category.
+    //
+    /*compile files('libs/google-api-client-1.18.0-rc.jar')
+                compile files('libs/google-api-client-android-1.18.0-rc.jar')
+                compile files('libs/google-api-services-calendar-v3-rev82-1.18.0-rc.jar')
+                compile files('libs/google-api-services-calendar-v3-rev82-1.18.0-rc-javadoc.jar')
+                compile files('libs/google-http-client-1.18.0-rc.jar')
+                compile files('libs/google-http-client-android-1.18.0-rc.jar')
+                compile files('libs/google-oauth-client-1.18.0-rc.jar')
+                compile files('libs/gson-2.1.jar')
+                compile files('libs/jackson-core-2.1.3.jar')
+                compile files('libs/jackson-core-asl-1.9.11.jar')
+                compile files('libs/jsr305-1.3.9.jar')
+                compile files('libs/protobuf-java-2.4.1.jar')
+                compile files('libs/google-http-client-jackson-1.18.0-rc.jar')
+                compile files('libs/htmlcleaner-2.8.jar')
+                */
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:19.1.+'
+    compile project(':Caldroid')
 }
